Fixed some problems, internal database H2 used